<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_bag_extractor</name>
  <version>0.0.0</version>
  <description>Interface</description>
  <maintainer email="BlackTea12@github.com">Yaeohn Kim</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
